# solar-failure-prediction-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py
data/: generate_data.py
models/: __init__.py
training/: __init__.py  train.py
utils/: __init__.py  helpers.py
